--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -1,13 +1,13 @@
 
-server.port=9001
+#server.port=9001
 
 #Configurations H2
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #défini l'encodage pour data.sql
-spring.sql.init.encoding=UTF-8
+#spring.sql.init.encoding=UTF-8
 
 #configuration
-mes-configs.limitDeProduit = 4
+#mes-configs.limitDeProduit = 4
